<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">om</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="searchFieldHint">Search&#8230;</string>

    <!-- Menu labels for all songs activity -->
    <string name="shuffle_menu_button">Shuffle</string>
    <string name="songs_textview">Songs</string>

    <!-- Labels for player layout -->
    <string name="song_title_default">My Song</string>
    <string name="playlist_description">Playlist</string>
    <string name="thumbnail_description">Thumbnail</string>

    <!-- Player button -->
    <string name="previous_button">Previous Button</string>
    <string name="backward_button">Backward Button</string>
    <string name="play_button">Play Button</string>
    <string name="forward_button">Forward Button</string>
    <string name="next_button">Next Button</string>
    <string name="repeat_button">Repeat Button</string>
    <string name="shuffle_button">Shuffle Button</string>
    <string name="title_activity_audio_player">AudioPlayer</string>

    <!-- All songs Action Bar Buttons -->
    <string name="playlist_action">Playlist</string>
    <string name="end_action">End</string>
    <string name="now_playing_action">Now Playing</string>
    <string name="title_activity_play_list">PlayLists</string>
	
    <!--Playlist Buttons -->
    <string name="add_new_playlist">New Playlist&#8230;</string>
    <string name="new_playlist_button">New Playlist</string>
    
</resources>
