<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#4a4a4a">
    
    <!-- Player Header -->
    <LinearLayout
        android:id = "@+id/playerHeader"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:background="@layout/player_header_background"
        android:layout_alignParentTop="true"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">
        
    
    
    <!-- Song Title -->
    <TextView 
        android:id="@+id/songTitle"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="#04b3d2"
        android:textSize="16sp"
        android:paddingLeft="10dp"
        android:textStyle="bold"
        android:text="@string/song_title_default"
        android:layout_marginTop="10dp"
        
    />
    
    <!-- Playlist Button -->
    <ImageButton
        android:id="@+id/playlistButton"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:src="@drawable/btn_playlist"
        android:background="@null"
        android:contentDescription="@string/playlist_description"
    />
    
	</LinearLayout>
	
    <!-- Song thumbnail Image -->
    <LinearLayout 
        android:id="@+id/songThumbnail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:layout_below="@id/playerHeader">
    
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/android_icon"
            android:contentDescription="@string/thumbnail_description"
        />
        
    </LinearLayout>
    
    <!-- Player Footer -->
    <LinearLayout 
        android:id="@+id/player_footer_background"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:background="@layout/player_footer_background"
        android:gravity="center">
        
        <!-- Player buttons -->
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@layout/rounded_corner"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
            
            <!-- Previous Button -->
            <ImageButton
                android:id="@+id/buttonPrevious"
                android:src="@drawable/btn_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/previous_button" 
            />
            
            <!-- Backward Button -->
            <ImageButton 
            	android:id="@+id/buttonBackward"
            	android:src="@drawable/btn_backward"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:background="@null"    
            	android:contentDescription="@string/backward_button"
            />
            
            <!-- Play Button -->
            <ImageButton 
                android:id="@+id/playButton"
                android:src="@drawable/btn_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/play_button"
            />
            
            <!-- Forward Button -->
            <ImageButton 
                android:id="@+id/forwardButton"
                android:src="@drawable/btn_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/forward_button"
            />
            
            <!-- Next Button -->
            <ImageButton
                android:id="@+id/nextButton"
                android:src="@drawable/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/next_button"
            />    
            
        </LinearLayout>
        
    </LinearLayout>
    
    <!-- Progress Bar/Seek Bar -->
    <SeekBar 
        android:id="@+id/songProgressBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:layout_above="@id/player_footer_background"
        android:thumb="@drawable/seek_handler"
        android:progressDrawable="@drawable/seekbar_progress"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
    />
    
    <!-- Timer Display -->
    <LinearLayout 
        android:id="@+id/timerDisplay"
        android:layout_above="@id/songProgressBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp">
        
        <!-- Current Duration Label -->
        <TextView 
            android:id="@+id/songCurrentDurationLabel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textColor="#eeeeee"
            android:textStyle="bold"
        />
        
        <!-- Total Duration Label -->
        <TextView 
            android:id="@+id/songTotalDurationLabel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:textColor="#04cbde"
            android:textStyle="bold"
        />
        
    </LinearLayout>    
        
    <!-- Repeat/Shuffle Buttons -->    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/timerDisplay"
        android:gravity="center">
        
        <ImageButton 
            android:id="@+id/repeatButton"
            android:src="@drawable/btn_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@null"
            android:contentDescription="@string/repeat_button"
        />
        
        <ImageButton 
            android:id="@+id/shuffleButton"
            android:src="@drawable/btn_shuffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@null"
            android:contentDescription="@string/shuffle_button"
        />
        
        
        
        
    </LinearLayout>
    
    
    
</RelativeLayout>
